k8s/app-backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-backend
  template:
    metadata:
      labels:
        app: app-backend
    spec:
      containers:
      - name: backend
        image: manishakakarla/fullstack-fastapi-mongo:latest
        ports:
        - containerPort: 8000
