k8s/app-mongo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-mongo
  template:
    metadata:
      labels:
        app: app-mongo
    spec:
      containers:
      - name: mongo
        image: mongo:latest
        ports:
        - containerPort: 27017
