k8s/app-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-backend-svc
spec:
  type: NodePort
  selector:
    app: app-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30001  # You can choose a value between 30000-32767
