k8s/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-mongo-svc
spec:
  selector:
    app: app-mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
